Connected frontend to backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,14 +1,11 @@
+# Core
 SECRET_KEY=super-secret-key
-DATABASE_URL=postgresql://unicart:unicart@db:5432/unicart
 JWT_SECRET_KEY=jwt-secret-key
-CORS_ORIGINS=http://localhost:5173
-AWS_ACCESS_KEY_ID=your-aws-access-key
-AWS_SECRET_ACCESS_KEY=your-aws-secret-key
-AWS_S3_BUCKET=unicart-bucket
-REDIS_URL=redis://redis:6379/0
-MAIL_SERVER=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=your-mailtrap-username
-MAIL_PASSWORD=your-mailtrap-password
+DATABASE_URL=postgresql://unicart:unicart@db:5432/unicart
+
+# CORS - Set this to your live frontend domain in production!
+CORS_ORIGINS=https://unicart.vercel.app
+
+# Payments (Paystack)
 PAYSTACK_SECRET_KEY=sk_test_646febb4a4d93333ed76c20485ee5efc72d617dc
 PAYSTACK_PUBLIC_KEY=pk_test_f8b87d2272ea878a7f3fa568ccd5eea55a5b5a40
