--- a/package.json
+++ b/package.json
@@ -82,7 +82,6 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.19",
-    "proxy": "http://localhost:5000"
+    "vite": "^5.4.19"
   }
 }
